2012-06-12  Hans-Peter Nilsson  <hp@axis.com>

	* doc/tm.texi.in (Addressing Modes) <TARGET_LEGITIMIZE_ADDRESS>:
	Mention that this hook needs to be defined for native TLS.
	* doc/tm.texi: Regenerate.

2012-06-11  Mike Stump  <mikestump@comcast.net>

	* emit-rtl.c (init_emit_once): Iterate through the
	MODE_PARTIAL_INT modes with MIN_MODE_PARTIAL_INT and
	MAX_MODE_PARTIAL_INT, as GET_MODE_WIDER_MODE doesn't step through
	all the MIN_MODE_PARTIAL_INT modes anymore.

2012-06-12  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* gcc/config/mips/mips-tables.opt (xlp): Fix merge typo.

2012-06-11  Roland McGrath  <mcgrathr@google.com>

	* dwarf2out.c (const_ok_for_output_1): Detect a TLS UNSPEC using
	SYMBOL_REF_TLS_MODEL rather than DECL_THREAD_LOCAL_P, in case it's
	not a VAR_DECL.  Also don't limit it to UNSPECs with exactly one
	operand.

2012-06-11  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/53511
	* config/sh/sh.md (fmasf4): New expander.
	(*macsf3): Rename to fmasf4_i.  Adapt to fma pattern.
	(mac_media): Rename to fmasf4_media.  Adapt to fma pattern.
	* config/sh/sh.opt (mfused-madd): Remove.
	* config/sh/sh.c (sh_option_override): Remove mfused-madd handling.
	(builtin_description bdesc): Remove __builtin_sh_media_FMAC_S.
	* config.gcc (sh[123456789lbe]*-*-* | sh-*-*): Add fused-madd.opt
	as extra options.
	* doc/invoke.texi (SH Options): Update mfused-madd and mno-fused-madd
	descriptions.

2012-06-11  Richard Henderson  <rth@redhat.com>

	* dwarf2cfi.c (scan_trace): Handle annulled branch-taken delay slots.

2012-06-11  Olivier Hainque  <hainque@adacore.com>

	* Makefile.in (GNATLIBCFLAGS_FOR_C): Remove $(PIC_FLAG_FOR_TARGET).
	(gnatlib-shared-default): Add $(PIC_FLAG_FOR_TARGET) to
	GNATLIBCFLAGS_FOR_C passed to gnatlib.
	(gnatlib-shared-win32): Likewise.
	(gnatlib-shared-darwin): Likewise.
	(gnatlib-shared-dual-win32): Pass PIC_FLAG_FOR_TARGET to
	gnatlib-shared-win32.

2012-06-11  Richard Guenther  <rguenther@suse.de>

	PR middle-end/53470